--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+GGJ-2023-NATDI/.idea/.idea.GGJ-2023-NATDI/.idea/indexLayout.xml
