--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ sysinfo.txt
 crashlytics-build.properties
 
 GGJ-2023-NATDI/.idea/.idea.GGJ-2023-NATDI/.idea/indexLayout.xml
+GGJ-2023-NATDI/Assets/Temp
