--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 
 GGJ-2023-NATDI/.idea/.idea.GGJ-2023-NATDI/.idea/indexLayout.xml
 GGJ-2023-NATDI/Assets/Temp
+GGJ-2023-NATDI/Assets/Temp.meta
